dsp/2022.1/_sources/rst/class_xf_dsp_aie_fir_decimate_asym_fir_decimate_asym_graph.rst.txt
.. index:: pair: class; xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph
.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph:

template class xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph
========================================================================

.. toctree::
	:hidden:

.. code-block:: cpp
	:class: overview-code-block

	#include "fir_decimate_asym_graph.hpp"


Overview
~~~~~~~~

fir_decimate_asym is an Asymmetric Decimation FIR filter

These are the templates to configure the asymmetric decimator FIR class.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - TT_DATA

        - 
          describes the type of individual data samples input to and output from the filter function. This is a typename and must be one of the following:
          
          int16, cint16, int32, cint32, float, cfloat.

    *
        - TT_COEFF

        - 
          describes the type of individual coefficients of the filter taps.
          
          It must be one of the same set of types listed for TT_DATA and must also satisfy the following rules:
          
          * Complex types are only supported when TT_DATA is also complex.
          
          * 32 bit types are only supported when TT_DATA is also a 32 bit type,
          
          * TT_COEFF must be an integer type if TT_DATA is an integer type
          
          * TT_COEFF must be a float type if TT_DATA is a float type.

    *
        - TP_FIR_LEN

        - is an unsigned integer which describes the number of taps in the filter. TP_FIR_LEN must be in the range 4 to 240 and must be an integer multiple of the TP_DECIMATE_FACTOR value.

    *
        - TP_DECIMATE_FACTOR

        - is an unsigned integer which describes the decimation factor of the filter, the ratio of input to output samples. TP_DECIMATE_FACTOR must be in the range 2 up to 7, however max supported decimation rate depends on the data type.

    *
        - TP_SHIFT

        - 
          describes power of 2 shift down applied to the accumulation of FIR terms before output.
          
          TP_SHIFT must be in the range 0 to 61.

    *
        - TP_RND

        - 
          describes the selection of rounding to be applied during the shift down stage of processing. TP_RND must be in the range 0 to 7 where
          
          * 0 = floor (truncate) eg. 3.8 Would become 3.
          
          * 1 = ceiling e.g. 3.2 would become 4.
          
          * 2 = round to positive infinity.
          
          * 3 = round to negative infinity.
          
          * 4 = round symmetrical to infinity.
          
          * 5 = round symmetrical to zero.
          
          * 6 = round convergent to even.
          
          * 7 = round convergent to odd.
            
            Modes 2 to 7 round to the nearest integer. They differ only in how they round for values of 0.5.

    *
        - TP_INPUT_WINDOW_VSIZE

        - 
          describes the number of samples in the window API used for input to the filter function.
          
          The number of values in the output window will be TP_INPUT_WINDOW_VSIZE divided by TP_DECIMATE_FACTOR by virtue the decimation factor. TP_INPUT_WINDOW_VSIZE must be an integer multiple of TP_DECIMATE_FACTOR. The resulting output window size must be a multiple of 256bits.
          
          Note: Margin size should not be included in TP_INPUT_WINDOW_VSIZE.

    *
        - TP_CASC_LEN

        - 
          describes the number of AIE processors to split the operation over.
          
          This allows resource to be traded for higher performance. TP_CASC_LEN must be in the range 1 (default) to 9.

    *
        - TP_USE_COEFF_RELOAD

        - 
          allows the user to select if runtime coefficient reloading should be used.
          
          When defining the parameter:
          
          * 0 = static coefficients, defined in filter constructor,
          
          * 1 = reloadable coefficients, passed as argument to runtime function.
            
            
            
            Note: when used, optional port: ``port<input> coeff;`` will be added to the FIR.

    *
        - TP_NUM_OUTPUTS

        - 
          sets the number of ports over which the output is sent.
          
          This can be 1 or 2. It is set to 1 by default.
          
          Depending on TP_API, additional output ports functionality differs. For Windows API, additional output provides flexibility in connecting FIR output with multiple destinations. Additional output ``out2`` is an exact copy of the data of the output port ``out`` .
          
          With Stream API, the additional output port increases the FIR's throughput.
          
          Data is sent in a 128-bit interleaved pattern, e.g. :
          
          
          
          * samples 0-3 is sent over stream0 for cint16 data type,
          
          * samples 4-7 is sent over stream1 for cint16 data type.
            
            Note: when used, optional port: ``port<output> out2;`` will be added to the FIR.

    *
        - TP_DUAL_IP

        - 
          allows 2 stream inputs to be connected to FIR, increasing available throughput.
          
          When set to 0, single stream will be connected as FIRs input.
          
          When set to 1, two stream inputs will be connected.
          
          In such case data should be organized in 128-bit interleaved pattern, e.g.:
          
          
          
          * samples 0-3 to be sent over stream0 for cint16 data type,
          
          * samples 4-7 to be sent over stream1 for cint16 data type.
            
            Note: when used, port: ``port<input> in2;`` will be added to the FIR.

    *
        - TP_API

        - 
          specifies if the input/output interface should be window-based or stream-based.
          
          The values supported are 0 (window API) or 1 (stream API).

.. ref-code-block:: cpp
	:class: overview-code-block

	template <
	    typename TT_DATA,
	    typename TT_COEFF,
	    unsigned int TP_FIR_LEN,
	    unsigned int TP_DECIMATE_FACTOR,
	    unsigned int TP_SHIFT,
	    unsigned int TP_RND,
	    unsigned int TP_INPUT_WINDOW_VSIZE,
	    unsigned int TP_CASC_LEN = 1,
	    unsigned int TP_USE_COEFF_RELOAD = 0,
	    unsigned int TP_NUM_OUTPUTS = 1,
	    unsigned int TP_DUAL_IP = 0,
	    unsigned int TP_API = 0
	    >
	class fir_decimate_asym_graph: public graph

	// fields

	port <input> :ref:`in<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1a3b0091def58b67093381fc52cefd7099>`
	port <output> :ref:`out<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1a404bef69ab454ac3ac642dbbb643db30>`
	:ref:`port_conditional<doxid-namespacexf_1_1dsp_1_1aie_1a5f0c6119facdd44d3456350e506b5d69>` <input, (TP_DUAL_IP==1)> :ref:`in2<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1ab153fd297b934e5f8e4feb982f86014a>`
	:ref:`port_conditional<doxid-namespacexf_1_1dsp_1_1aie_1a5f0c6119facdd44d3456350e506b5d69>` <input, (TP_USE_COEFF_RELOAD==1)> :ref:`coeff<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1a75bd3c6ed30ab119fded52c38d562d7f>`
	:ref:`port_conditional<doxid-namespacexf_1_1dsp_1_1aie_1a5f0c6119facdd44d3456350e506b5d69>` <output, (TP_NUM_OUTPUTS==2)> :ref:`out2<doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1a39d107d5f4d37fee2e50a2ca31cc8240>`

Fields
------

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1a3b0091def58b67093381fc52cefd7099:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph::in:
.. ref-code-block:: cpp
	:class: title-code-block

	port <input> in

The input data to the function. This input is either a window API of samples of TT_DATA type or stream API (depending on TP_API). Note: Margin is added internally to the graph, when connecting input port with kernel port. Therefore, margin should not be added when connecting graph to a higher level design unit. Margin size (in Bytes) equals to TP_FIR_LEN rounded up to a nearest multiple of 32 bytes.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1a404bef69ab454ac3ac642dbbb643db30:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph::out:
.. ref-code-block:: cpp
	:class: title-code-block

	port <output> out

The output data from the function. This output is either a window API of samples of TT_DATA type or stream API (depending on TP_API). Number of output samples is determined by interpolation & decimation factors (if present).

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1ab153fd297b934e5f8e4feb982f86014a:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph::in2:
.. ref-code-block:: cpp
	:class: title-code-block

	:ref:`port_conditional<doxid-namespacexf_1_1dsp_1_1aie_1a5f0c6119facdd44d3456350e506b5d69>` <input, (TP_DUAL_IP==1)> in2

The conditional input data to the function. This input is (generated when TP_DUAL_IP == 1) either a window API of samples of TT_DATA type or stream API (depending on TP_API).

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1a75bd3c6ed30ab119fded52c38d562d7f:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph::coeff:
.. ref-code-block:: cpp
	:class: title-code-block

	:ref:`port_conditional<doxid-namespacexf_1_1dsp_1_1aie_1a5f0c6119facdd44d3456350e506b5d69>` <input, (TP_USE_COEFF_RELOAD==1)> coeff

The conditional coefficient data to the function. This port is (generated when TP_USE_COEFF_RELOAD == 1) an array of coefficients of TT_COEFF type.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1a39d107d5f4d37fee2e50a2ca31cc8240:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph::out2:
.. ref-code-block:: cpp
	:class: title-code-block

	:ref:`port_conditional<doxid-namespacexf_1_1dsp_1_1aie_1a5f0c6119facdd44d3456350e506b5d69>` <output, (TP_NUM_OUTPUTS==2)> out2

The output data from the function. This output is (generated when TP_NUM_OUTPUTS == 2) either a window API of samples of TT_DATA type or stream API (depending on TP_API). Number of output samples is determined by interpolation & decimation factors (if present).


Methods
~~~~~~~

.. FunctionSection

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1a7a2767028255468a3a65572c221fe874:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph::getkernels:

getKernels
----------


getKernels overload (1)
+++++++++++++++++++++++


.. ref-code-block:: cpp
	:class: title-code-block

	kernel* getKernels ()

Access function to get pointer to kernel (or first kernel in a chained configuration).

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1ac83016bbf0339879120d1d1e3f2e2b9a:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph::getkernels-2:

getKernels overload (2)
+++++++++++++++++++++++


.. ref-code-block:: cpp
	:class: title-code-block

	kernel* getKernels (int cascadePosition)

Access function to get pointer to an indexed kernel.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - cascadePosition

        - an index to the kernel's position in the cascade.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1acdd3ab110a0e57b2fcb86643ee3bb8b2:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph::getinnet:

getInNet
--------


.. ref-code-block:: cpp
	:class: title-code-block

	connect <stream, stream>* getInNet (int cascadePosition)

Access function to get pointer to net of the ``in`` port. Nets only get assigned when streaming interface is being broadcast, i.e. nets only get used when TP_API == 1 and TP_CASC_LEN > 1



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - cascadePosition

        - an index to the kernel's position in the cascade.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1a027d991a8b0a0bd9c36622c2e7d266fb:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph::getin2net:

getIn2Net
---------


.. ref-code-block:: cpp
	:class: title-code-block

	connect <stream, stream>* getIn2Net (int cascadePosition)

Access function to get pointer to net of the ``in2`` port, when port is being generated, i.e. when TP_DUAL_IP == 1. Nets only get assigned when streaming interface is being broadcast, i.e. nets only get used when TP_API == 1 and TP_CASC_LEN > 1



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - cascadePosition

        - an index to the kernel's position in the cascade.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1ab9d304d54c428600de430fdda8e5b38d:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph::getkernelarchs:

getKernelArchs
--------------


.. ref-code-block:: cpp
	:class: title-code-block

	unsigned int getKernelArchs ()

Access function to get kernel's architecture (or first kernel's architecture in a chained configuration).

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1a7d0bfdbee3ba11f14a2ed0f4b3ebc308:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph::fir_decimate_asym_graph:

fir_decimate_asym_graph
-----------------------


fir_decimate_asym_graph overload (1)
++++++++++++++++++++++++++++++++++++


.. ref-code-block:: cpp
	:class: title-code-block

	fir_decimate_asym_graph (const std::vector <TT_COEFF>& taps)

This is the constructor function for the FIR graph with static coefficients.



.. rubric:: Parameters:

.. list-table::
    :widths: 20 80

    *
        - taps

        - a reference to the std::vector array of taps values of type TT_COEFF.

.. _doxid-classxf_1_1dsp_1_1aie_1_1fir_1_1decimate__asym_1_1fir__decimate__asym__graph_1ab179a771602944ee36903d5f07bd9826:
.. _cid-xf::dsp::aie::fir::decimate_asym::fir_decimate_asym_graph::fir_decimate_asym_graph-2:

fir_decimate_asym_graph overload (2)
++++++++++++++++++++++++++++++++++++


.. ref-code-block:: cpp
	:class: title-code-block

	fir_decimate_asym_graph ()

This is the constructor function for the FIR graph with reloadable coefficients.

